hipster/hipster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hipster-ingress
  namespace: hipster
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gy-routing-hipster.kubedave.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-external
                port:
                  number: 80
